k8s/disabled/smokeping/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smokeping
  namespace: monitoring
  labels:
    app: smokeping
spec:
  selector:
    matchLabels:
      app: smokeping
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: smokeping
    spec:
      containers:
        - name: smokeping
          image: ghcr.io/jwigley/smokeping-speedtest:latest@sha256:561a07e6a0440f2ddff85300b2b9b9d93a207b7f557a7d42d1e4f6c0bd311de0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: datastore
              mountPath: /data
            - name: config
              mountPath: /config
      volumes:
        - name: smokeping-confmap
          configMap:
            name: smokeping-confmap
        - name: config
          emptyDir: {}
        - name: datastore
          hostPath:
            path: /config/smokeping
            type: DirectoryOrCreate
      restartPolicy: Always
