k8s/disabled/smokeping/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smokeping
  namespace: monitoring
  labels:
    app: smokeping
spec:
  selector:
    app: smokeping
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
